--- a/index.html
+++ b/index.html
@@ -79,7 +79,6 @@
 	</nav>
 
 	<!-- fullscreen -->
-	<div id="home" class="wadahcarousel">
 		<div id="slides" class="carousel slide" data-ride="carousel">
 		  <ol class="carousel-indicators">
 		    <li data-target="#slides" data-slide-to="0" class="active"></li>
@@ -87,7 +86,7 @@
 		    <li data-target="#slides" data-slide-to="2"></li>
 		  </ol>
 		  <div class="carousel-inner">
-		    <div class="carousel-item active">
+		    <div class="carousel-item active fill" style="background-image:url('img/bg1.jpg')">
 		    	<div class="carousel-caption">
 						<h1 class="display-2 animated bounce">TESTIS</h1>
 						<h3>coba buat template</h3>
@@ -98,10 +97,10 @@
 							HERE TOO
 						</button>
 				</div>
-		     	<img class="d-block w-100" src="img/bg1.jpg" alt="First slide">
+		     
 
 		    </div>
-		    <div class="carousel-item">
+		    <div class="carousel-item fill" style="background-image:url('img/bg2.jpg')">
 		      	<div class="carousel-caption">
 						<h1 class="display-2">TESTIS</h1>
 						<h3>coba buat template</h3>
@@ -112,10 +111,9 @@
 							HERE TOO
 						</button>
 				</div>
-		      	<img class="d-block w-100" src="img/bg2.jpg" alt="Second slide">
 		    </div>
-		    <div class="carousel-item">
-		    	<div class="carousel-caption">
+		    <div class="carousel-item fill" style="background-image:url('img/bg3.jpg')">
+		    	<div class="carousel-caption" >
 						<h1 class="display-2">TESTIS</h1>
 						<h3>coba buat template</h3>
 						<button type="button" class="btn btn-outline-light btn-lg">
@@ -126,7 +124,6 @@
 						</button>
 
 				</div>
-		      	<img class="d-block w-100" src="img/bg3.jpg" alt="Third slide">
 		    </div>
 		  </div>
 		  <a class="carousel-control-prev" href="#slides" role="button" data-slide="prev">
@@ -138,7 +135,7 @@
 		    <span class="sr-only">Next</span>
 		  </a>
 		</div>
-	</div>
+
 
 
 	<!-- drink food view -->
