--- a/snack.htm
+++ b/snack.htm
@@ -1,6 +1,6 @@
 <div class="card-header">Snack</div>
 				<div class="row mx-auto padding">
-					<div class="col-lg-3">
+					<div class="col-md-3 col-sm-6">
 						<div class="card">
 						  <img class="card-img-top" src="img/snack.png" alt="Card image cap">
 						  <div class="card-body">
@@ -10,7 +10,7 @@
 						  </div>
 						</div>
 					</div>
-					<div class="col-md-3">
+					<div class="col-md-3 col-sm-6">
 						<div class="card" >
 						  <img class="card-img-top" src="img/snack.png" alt="Card image cap">
 						  <div class="card-body">
@@ -20,7 +20,7 @@
 						  </div>
 						</div>
 					</div>
-					<div class="col-md-3">
+					<div class="col-md-3 col-sm-6 col-sm-6">
 						<div class="card" >
 						  <img class="card-img-top" src="img/snack.png" alt="Card image cap">
 						  <div class="card-body">
@@ -30,7 +30,7 @@
 						  </div>
 						</div>
 					</div>
-					<div class="col-md-3">
+					<div class="col-md-3 col-sm-6 col-sm-6">
 						<div class="card" >
 						  <img class="card-img-top" src="img/snack.png" alt="Card image cap">
 						  <div class="card-body">
@@ -43,7 +43,7 @@
 				</div>
 
 				<div class="row mx-auto padding">
-					<div class="col-lg-3">
+					<div class="col-md-3 col-sm-6 col-sm-6">
 						<div class="card" >
 						  <img class="card-img-top" src="img/snack.png" alt="Card image cap">
 						  <div class="card-body">
@@ -53,7 +53,7 @@
 						  </div>
 						</div>
 					</div>
-					<div class="col-md-3">
+					<div class="col-md-3 col-sm-6">
 						<div class="card" >
 						  <img class="card-img-top" src="img/snack.png" alt="Card image cap">
 						  <div class="card-body">
@@ -63,7 +63,7 @@
 						  </div>
 						</div>
 					</div>
-					<div class="col-md-3">
+					<div class="col-md-3 col-sm-6">
 						<div class="card" >
 						  <img class="card-img-top" src="img/snack.png" alt="Card image cap">
 						  <div class="card-body">
@@ -73,7 +73,7 @@
 						  </div>
 						</div>
 					</div>
-					<div class="col-md-3">
+					<div class="col-md-3 col-sm-6">
 						<div class="card" >
 						  <img class="card-img-top" src="img/snack.png" alt="Card image cap">
 						  <div class="card-body">
