--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>COBA</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-
+	<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css"> -->
+	<link rel="stylesheet" type="text/css" href="animate.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
@@ -88,7 +89,7 @@
 		  <div class="carousel-inner">
 		    <div class="carousel-item active fill" style="background-image:url('img/bg1.jpg')">
 		    	<div class="carousel-caption">
-						<h1 class="display-2 animated bounce">TESTIS</h1>
+						<h1 class="display-2 animated infinite bounce">TESTIS</h1>
 						<h3>coba buat template</h3>
 						<button type="button" class="btn btn-outline-light btn-lg">
 							CLICK HERE
