--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -22,28 +22,10 @@
 		});
 	</script>
 
-	<script>
-		var app = angular.module("myApp", ["ngRoute"]);
-			app.config(function($routeProvider) {
-			    $routeProvider
-			    .when("/", {
-			        templateUrl : "blank.htm"
-			    })
-			    .when("/drink", {
-			        templateUrl : "drink.htm"
-			    })
-			    .when("/snack", {
-			        templateUrl : "snack.htm"
-			    })
-			    .when("/food", {
-			        templateUrl : "food.htm"
-			    });
-		});
-	</script>
 </head>
-<body ng-app="myApp">
+<body>
 
-	<!-- NAVBAR -->
+	<!-- navbar -->
 	<nav class="navbar navbar-expand-md navbar-dark fixed-top">
 		<div class="container-fluid">
 			<a class="navbar-brand" href="index.html">
@@ -59,13 +41,13 @@
 					<li class="nav-item">
 						<a class="nav-link" href="index.html">Home</a>
 					</li>
-					<li class="nav-item active">
+					<li class="nav-item">
 						<a class="nav-link" href="menu.html">Menu</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="about.html">About</a>
 					</li>
-					<li class="nav-item">
+					<li class="nav-item active">
 						<a class="nav-link" href="contact.html">Contact</a>
 					</li>
 				</ul>
@@ -73,7 +55,7 @@
 		</div>
 	</nav>
 
-	<!-- CAROUSEL -->
+	<!-- fullscreen -->
 	<div id="slides" class="carousel slide" data-ride="carousel">
 		  <ol class="carousel-indicators">
 		    <li data-target="#slides" data-slide-to="0" class="active"></li>
@@ -115,26 +97,35 @@
 		  </a>
 		</div>
 
-	<!-- CONTENT MENU -->
-	<div id="menu" class="container-fluid padding text-center mx-auto">
-		<h1 class="diplay-3">MENU</h1>
-
+	<!-- about -->
+	<div class="container-fluid padding">
 		<div class="row">
-			<div class="col-xs-3 col-sm-4">
-				<a href="#!drink"><img class="img-fluid" src="img/drink.png"></a>
+			<div class="col-12">
+			<h1 class="display-4  text-center">CONTACT US</h1>
 			</div>
-			<div class="col-xs-3 col-sm-4">
-				<a href="#!snack"><img class="img-fluid" src="img/snack.png"></a>
+			<div class="col-md-4">
+				<img class="img-fluid" src="img/contact.jpg">
 			</div>
-			<div class="col-xs-3 col-sm-4">
-				<a href="#!food"><img class="img-fluid" src="img/food.png"></a>
+			<div class="col-md-8">
+				<form>
+				  	<div class="form-group">
+				      <input type="text" class="form-control" placeholder="Name" name="text2">
+				    </div>
+				    <div class="form-group">
+				      <input type="text" class="form-control" placeholder="Email" name="text2">
+				    </div>
+				    <div class="form-group">
+				      <textarea class="form-control" rows="5" placeholder="Your message" name="text"></textarea>
+				    </div>
+				    <a type="submit" class="btn btn-outline-dark" href="">Submit</a>
+				</form>
 			</div>
-		</div>
-
-		<div ng-view class="card wadahcard mx-auto">
-			
 		</div>
 	</div>
+
+
+
+	<!-- fixed bg -->
 
 	<figure>
 		<div class="fixedbg">
@@ -157,7 +148,6 @@
 			</div>
 		</div>		
 	</div>
-
 
 	<!-- footer -->
 
@@ -185,10 +175,6 @@
 			</div>
 		</div>
 	</footer>
-
-</body>
-</html>
-
 
 </body>
 </html>
