--- a/drink.htm
+++ b/drink.htm
@@ -4,7 +4,7 @@
 						<div class="card" >
 						  <img class="card-img-top" src="img/drink/1.jpg" alt="Card image cap">
 						  <div class="card-body">
-						    <h5 class="card-title">Smoothies Strawberry</h5>
+						    <h5 class="card-title">Strawberry Smoothies</h5>
 						    <p class="card-text">Rp. 15.000,-</p>
 						    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#drink1">Open</button>
 						  </div>
@@ -14,7 +14,7 @@
 						<div class="card" >
 						  <img class="card-img-top" src="img/drink/2.jpg" alt="Card image cap">
 						  <div class="card-body">
-						    <h5 class="card-title">Smoothies Coklat</h5>
+						    <h5 class="card-title">Chocolate Smoothies</h5>
 						    <p class="card-text">Rp. 15.000,-</p>
 						    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#drink2">Open</button>
 						  </div>
