--- a/menu.html
+++ b/menu.html
@@ -4,7 +4,6 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>COBA</title>
-
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="animate.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -47,7 +46,7 @@
 	<nav class="navbar navbar-expand-md navbar-dark fixed-top">
 		<div class="container-fluid">
 			<a class="navbar-brand" href="index.html">
-				TES SEK
+				ENJOY CAFE
 			</a>
 
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
@@ -149,15 +148,14 @@
 				<h2>Connect With Us</h2>
 			</div>
 			<div class="col-12 sosmed padding">
-				<a href="facebook.com/felixdjupha"><i class="fab fa-facebook"></i></a>
-				<a href="twitter.com/jupretz"><i class="fab fa-twitter"></i></a>
-				<a href="facebook.com/felixdjupha"><i class="fab fa-google-plus-g"></i></a>
-				<a href="facebook.com/felixdjupha"><i class="fab fa-instagram"></i></a>
-				<a href="facebook.com/felixdjupha"><i class="fab fa-youtube"></i></a>
+				 <a href="facebook.com/felixdjupha"><i class="fab fa-facebook"></i></a>
+				 <a href="twitter.com/jupretz"><i class="fab fa-twitter"></i></a>
+				 <a href="facebook.com/felixdjupha"><i class="fab fa-google-plus-g"></i></a>
+				 <a href="facebook.com/felixdjupha"><i class="fab fa-instagram"></i></a>
+				 <a href="facebook.com/felixdjupha"><i class="fab fa-youtube"></i></a>
 			</div>
 		</div>		
 	</div>
-
 
 	<!-- footer -->
 
@@ -187,8 +185,4 @@
 	</footer>
 
 </body>
-</html>
-
-
-</body>
-</html>
+</html>\
