--- a/menu.html
+++ b/menu.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>COBA</title>
+
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="animate.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -46,7 +47,7 @@
 	<nav class="navbar navbar-expand-md navbar-dark fixed-top">
 		<div class="container-fluid">
 			<a class="navbar-brand" href="index.html">
-				ENJOY CAFE
+				TES SEK
 			</a>
 
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
@@ -148,14 +149,15 @@
 				<h2>Connect With Us</h2>
 			</div>
 			<div class="col-12 sosmed padding">
-				 <a href="facebook.com/felixdjupha"><i class="fab fa-facebook"></i></a>
-				 <a href="twitter.com/jupretz"><i class="fab fa-twitter"></i></a>
-				 <a href="facebook.com/felixdjupha"><i class="fab fa-google-plus-g"></i></a>
-				 <a href="facebook.com/felixdjupha"><i class="fab fa-instagram"></i></a>
-				 <a href="facebook.com/felixdjupha"><i class="fab fa-youtube"></i></a>
+				<a href="facebook.com/felixdjupha"><i class="fab fa-facebook"></i></a>
+				<a href="twitter.com/jupretz"><i class="fab fa-twitter"></i></a>
+				<a href="facebook.com/felixdjupha"><i class="fab fa-google-plus-g"></i></a>
+				<a href="facebook.com/felixdjupha"><i class="fab fa-instagram"></i></a>
+				<a href="facebook.com/felixdjupha"><i class="fab fa-youtube"></i></a>
 			</div>
 		</div>		
 	</div>
+
 
 	<!-- footer -->
 
@@ -185,4 +187,8 @@
 	</footer>
 
 </body>
-</html>\
+</html>
+
+
+</body>
+</html>
